# aot-toolkit

./: README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml  python-app.yml
aot/: __init__.py
aot/cli/: __init__.py  art.py  fetch.py  main.py
aot/core/: __init__.py  database.py  exceptions.py
aot/data/: characters.json  quotes.json  titans.json
aot/engine/: __init__.py  combat.py  odm_gear.py
tests/: test_database.py  test_engine.py
